Fix Doc reader page navbar-title text-overflow

--- a/app/javascript/booklab/editor/index.scss
+++ b/app/javascript/booklab/editor/index.scss
@@ -13,7 +13,7 @@
 
       a { color: #333; }
 
-      .divide { color: #bbb; margin: 0 5px; }
+      .divider { color: #bbb; margin: 0 5px; }
     }
 
     .navbar-buttons {
