--- a/app/javascript/booklab/reader/index.scss
+++ b/app/javascript/booklab/reader/index.scss
@@ -21,7 +21,16 @@
 
       a { color: #333; }
 
-      .divide { color: #bbb; margin: 0 5px; }
+      .divider { color: #bbb; margin: 0 5px; }
+
+      a,
+      .divider {
+        @extend .text-overflow;
+      }
+      .group-name,
+      .repository-name {
+        max-width: 150px;
+      }
 
       .doc-title {
         max-width: 200px;
