--- a/app/javascript/booklab/toc-editor/index.scss
+++ b/app/javascript/booklab/toc-editor/index.scss
@@ -24,7 +24,7 @@
 
       a { color: #333; }
 
-      .divide { color: #bbb; margin: 0 5px; }
+      .divider { color: #bbb; margin: 0 5px; }
     }
 
     .navbar-buttons {
